Added MSE metrics

--- a/LR DT FR.ipynb
+++ b/LR DT FR.ipynb
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 194,
    "id": "d3a51581-dd9a-4c27-b7a1-67f33d994aad",
    "metadata": {},
    "outputs": [],
@@ -760,7 +760,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.metrics import r2_score,mean_squared_error"
+    "from sklearn.metrics import r2_score, mean_squared_error"
    ]
   },
   {
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 195,
    "id": "aa9eed80-952b-4538-8be6-bcfeacbc1e75",
    "metadata": {},
    "outputs": [
@@ -910,18 +910,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "LR MSE train: 36984989.588\n",
+      "LR MSE test: 35304471.695\n",
       "LR R2 train: 0.741\n",
       "LR R2 test: 0.776\n"
      ]
     }
    ],
    "source": [
+    "print('LR MSE train: %.3f\\nLR MSE test: %.3f' % (mean_squared_error(y_train, lr_train_pred), mean_squared_error(y_test, lr_test_pred)))\n",
     "print('LR R2 train: %.3f\\nLR R2 test: %.3f' % (r2_score(y_train, lr_train_pred), r2_score(y_test, lr_test_pred)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 196,
    "id": "7f0fa8a3-eab3-4a99-9f45-5cf5ee6ce8d8",
    "metadata": {},
    "outputs": [
@@ -929,18 +932,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "DT MSE train: 17829734.320\n",
+      "DT MSE test: 20304314.269\n",
       "DT R2 train: 0.875\n",
       "DT R2 test: 0.871\n"
      ]
     }
    ],
    "source": [
+    "print('DT MSE train: %.3f\\nDT MSE test: %.3f' % (mean_squared_error(y_train, dt_train_pred), mean_squared_error(y_test, dt_test_pred)))\n",
     "print('DT R2 train: %.3f\\nDT R2 test: %.3f' % (r2_score(y_train, dt_train_pred), r2_score(y_test, dt_test_pred)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 197,
    "id": "4f221484-b33b-4c8f-9d4a-91ea01f9821d",
    "metadata": {},
    "outputs": [
@@ -948,12 +954,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "RF MSE train: 17078304.584\n",
+      "RF MSE test: 19644007.137\n",
       "RF R2 train: 0.880\n",
       "RF R2 test: 0.876\n"
      ]
     }
    ],
    "source": [
+    "print('RF MSE train: %.3f\\nRF MSE test: %.3f' % (mean_squared_error(y_train, rf_train_pred), mean_squared_error(y_test, rf_test_pred)))\n",
     "print('RF R2 train: %.3f\\nRF R2 test: %.3f' % (r2_score(y_train, rf_train_pred), r2_score(y_test, rf_test_pred)))"
    ]
   },
