--- a/DBSCAN.ipynb
+++ b/DBSCAN.ipynb
@@ -5,7 +5,7 @@
    "id": "4909814c-7b4b-4e2c-9190-5ef6d1f295be",
    "metadata": {},
    "source": [
-    "DBSCAN - алгоритм кластеризации, кластеризует по наличию определённого количества объектов в окрестности заданного расстояния\n",
+    "DBSCAN - алгоритм кластеризации, кластеризует по наличию определённого количества объектов в окрестности заданного расстояния. Если нужное количество объектов есть - то это кластер, остальные его точки на первом этапе краевые. Если же нужного количества нет, то точка считается шумом.\n",
     "\n",
     "Датасет для распределения пингвинов по их видам\n",
     "https://www.kaggle.com/datasets/youssefaboelwafa/clustering-penguins-species/data\n",
@@ -1075,7 +1075,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2973c2f8690>]"
+       "[<matplotlib.lines.Line2D at 0x21712dc9550>]"
       ]
      },
      "execution_count": 27,
@@ -1085,7 +1085,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b3ad1513a7445dfb0bc9832249e3373",
+       "model_id": "07db01fded124d6abca433995cd38dae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1143,7 +1143,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdddaf3c1f224e20937c50b65ee14529",
+       "model_id": "1999e0e08909408bb30c0735a0cf0445",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1193,7 +1193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80db376e420c4371b5e53216ec039e8d",
+       "model_id": "44328619ef504066ba56d395dfeb3c5e",
        "version_major": 2,
        "version_minor": 0
       },
